chore(refactor): more conversion to records